--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Game15</title>
     <link rel="stylesheet" href="css/game15reset.css" type="text/css"/>
     <link rel="stylesheet" href="css/game15.css" type="text/css"/>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="btn_wrap">
