--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button class="btn mix">Mix please!</button>
     </div>
     <div class="wrapper">
-        <img class="win" src="img/game15win.png" alt="Победа!">
+        <img class="win" src="img/game15win-min.png" alt="Победа!">
         <div id="b01" class="button remix">1</div>
         <div id="b02" class="button remix">2</div>
         <div id="b03" class="button remix">3</div>
